--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,11 +6,9 @@ on:
       - '*'
 
 jobs:
-  build-release:
-    name: Build and Release
+  build:
+    name: Build
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -25,9 +23,32 @@ jobs:
         run: |
           make build
 
-      - name: Create Release
+      - name: Upload binary artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: cron-service-binary
+          path: cmd/cron-service/bin/cron-service
+
+  release:
+    name: Create Release
+    runs-on: ubuntu-latest
+    needs: build
+    if: startsWith(github.ref, 'refs/tags/')
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Download binary artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: cron-service-binary
+          path: ./
+
+      - name: Make binary executable
+        run: chmod +x cron-service
+
+      - name: Create GitHub Release
         uses: ncipollo/release-action@v1
         with:
-          artifacts: cmd/cron-service/bin/cron-service
-          tag: ${{ github.ref }}
-          name: "${{ github.ref }}"
+          artifacts: cron-service
+          generateReleaseNotes: true
+          token: ${{ secrets.GITHUB_TOKEN }}
