--- a/config.yaml
+++ b/config.yaml
@@ -1,1 +1,29 @@
-jobs: []
+jobs:
+    - id: test-job-2
+      name: Test Job 2
+      schedule: '* * * * *'
+      enabled: true
+      primary:
+        url: https://postman-echo.com/post
+        method: POST
+        body: '{"message":"Hello World","reminder_text":"{{REMINDER}}"}'
+        enabled: false
+      reminders:
+        - id: reminder-2
+          text: This is a future test reminder
+          datetime: 2025-12-08T13:05:00Z
+    - id: test-job-3
+      name: Test Job 3
+      schedule: '* * * * *'
+      enabled: true
+      primary:
+        url: https://postman-echo.com/post
+        method: POST
+        body: '{"message":"Hello from primary"}'
+        enabled: true
+      secondary:
+        url: https://postman-echo.com/post
+        method: POST
+        body: '{"message":"Hello from secondary"}'
+        enabled: false
+      save_output: true
